# CrabChat

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh  config.example.toml
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
docs/: ARCHITECTURE.md
scripts/: generate_icon.py
src/: main.rs
src/app/: action.rs  event.rs  handler.rs  mod.rs  state.rs
src/config/: mod.rs  model.rs  nickname.rs
src/dcc/: manager.rs  mod.rs  parser.rs  search_results.rs  security.rs  transfer.rs
src/irc/: commands.rs  connection.rs  manager.rs  mod.rs
src/logging/: mod.rs
src/ui/: channel_browser.rs  input_box.rs  layout.rs  message_area.rs  mirc_colors.rs  mod.rs  search_results.rs  server_browser.rs  server_tree.rs  status_bar.rs  theme.rs  topic_bar.rs  user_list.rs
