[package]
name = "ircchat"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# IRC protocol
irc = "1.0"

# TLS
tokio-rustls = "0.26"
rustls = "0.23"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-width = "0.2"
