[package]
name = "crabchat"
version = "0.2.0"
edition = "2021"
description = "A secure IRC TUI client built in Rust"
license = "MIT"
repository = "https://github.com/jeremie/crabchat"
readme = "README.md"
keywords = ["irc", "tui", "chat", "terminal"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# IRC protocol
irc = "1.0"

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
openssl = { version = "0.10", features = ["vendored"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-width = "0.2"
rand = "0.10.0"
zip = "2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
